zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__close_one_liner_stacked_pane_above_main_pane.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────── ace-aardvark ┐┌ Pane #2 ─────────────────────────────────── apt-anteater ┐
01 (C): │                                                           │┌ Pane #4 ─────────────────────────────────── coy-backpack ┐
02 (C): │                                                           ││                                                          │
03 (C): │                                                           ││                                                          │
04 (C): │                                                           ││                                                          │
05 (C): │                                                           ││                                                          │
06 (C): │                                                           ││                                                          │
07 (C): │                                                           ││                                                          │
08 (C): │                                                           ││                                                          │
09 (C): │                                                           ││                                                          │
10 (C): │                                                           ││                                                          │
11 (C): │                                                           ││                                                          │
12 (C): │                                                           ││                                                          │
13 (C): │                                                           ││                                                          │
14 (C): │                                                           ││                                                          │
15 (C): │                                                           ││                                                          │
16 (C): │                                                           ││                                                          │
17 (C): │                                                           │└──────────────────────────────────────────────────────────┘
18 (C): │                                                           │└ Pane #5 ─────────────────────────────────── dry-backyard ┘
19 (C): └───────────────────────────────────────────────────────────┘└ Pane #6 ─────────────────────────────────── fab-barnacle ┘
